Refactoring source structure.

--- a/background.html
+++ b/background.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="jquery.js"></script>
-<script type="text/javascript" src="twitter_lib.js"></script>
+<script type="text/javascript" src="lib/jquery.js"></script>
+<script type="text/javascript" src="lib/twitter_lib.js"></script>
 <script>
 var dataStore = {};
 function setItem(name, data) {
