--- a/index.html
+++ b/index.html
@@ -1,47 +1,121 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="keywords" content="google chrome, chromium, extension, twitter"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="showdown.js"></script>
-
 	<title>Chromed Bird</title>
 
 	<style>
     body {
       font-family: Helvetica, Arial, sans-serif;
-    }
-    #content {
-      width: 90%;
-      padding: 5px;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: #6DAFEB;
-      border: 4px solid #365775;
-    }
-    #project_page {
-      width: 100%;
-      text-align: center;
+      font-size: 10pt;
     }
     a {
-      color: #00f;
+      color: #555;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
-    </style>
 
-    <script>
-  $(function() {
-    $.get('http://github.com/cezarsa/chromed_bird/raw/master/README.md', null, function(data, status) {
-      var converter = new Showdown.converter();
-      $('#content').html(converter.makeHtml(data));
-    }, 'text');
-  });
+    #install {
+      text-align: center;
+      background-color: #6DAFEB;
+      width: 150px;
+      line-height: 60px;
+      border: 4px solid #365775;
+      cursor: pointer;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 10px;
+    }
+    #install:hover {
+      outline: 2px solid #365775;
+    }
+    #title {
+      text-align: center;
+      color: 333;
+      font-size: 12pt;
+      font-style: italic;
+      font-weight: bold;
+    }
+    div.side_box {
+      width: 43%;
+      margin-top: 20px;
+      padding: 5px;
+      background-color: #6DAFEB;
+      border: 1px solid #365775;
+      min-height: 200px;
+    }
+     #content_left {
+      margin-left: 30px;
+      float: left;
+    }
+    #content_right {
+      margin-right: 30px;
+      float: right;
+    }
+    div.side_box h1 {
+      margin: 0px;
+      padding: 0px;
+      font-size: 1.2em;
+    }
+    </style>
+<script>
+$(function() {
+  var mail = "cezarsa";
+  mail += "@";
+  mail += "gmail.";
+  mail += "com";
+  var link = $("<a href=''></a>");
+  link.attr('href', "mailto:" + mail);
+  link.text(mail);
+  $("span.my_email").html(link);
+});
 </script>
 </head>
 <body>
-<div id="project_page"><a href="http://github.com/cezarsa/chromed_bird">Project Page</a></div>
-<div id="content"></div>
+<p id="title">
+Chromed Bird
+</div>
+<div id="install" onclick="location.href='http://cloud.github.com/downloads/cezarsa/chromed_bird/chromed_bird_current.crx'">
+Install it now!
+</div>
+
+<div id="content_left" class="side_box">
+  <h1>What is it?</h1>
+  <p>
+    Chromed Bird is an open source Chromium extension that allows you to follow your Twitter account using Google Chrome.
+  </p>
+  <p>
+    More details in the <a href="http://github.com/cezarsa/chromed_bird">GitHub Project Page</a>.
+  </p>
+  <h1>Contact</h1>
+  <p>
+    <span class="my_email"></span><br/>
+    <a href="http://github.com/cezarsa">http://github.com/cezarsa</a><br/>
+    <a href="http://twitter.com/cezarsa">http://twitter.com/cezarsa</a>
+  </p>
+</div>
+
+<div id="content_right" class="side_box">
+  <h1>Current Features</h1>
+  <p>
+    <ul>
+      <li>Follow your friends timeline and navigate through older tweets;</li>
+      <li>Tweets caching to avoid hitting Twitter's API rate limit;</li>
+      <li>Compose, reply, and RT tweets;</li>
+      <li>The extension updates itself as soon as new versions are available.</li>
+    </ul>
+  <h1>Coming Soon</h1>
+  <p>
+    <ul>
+      <li>Track read / unread tweets;</li>
+      <li>Notify user whenever new tweets arrive.</li>
+    </ul>
+  </p>
+
+</div>
 </body>
 </html>
