--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="keywords" content="google chrome, chromium, extension, twitter"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="keywords" content="google chrome, chromium, extension, twitter">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript"></script>
 	<title>Chromed Bird</title>
 
-	<style>
+	<style type="text/css">
     body {
       font-family: Helvetica, Arial, sans-serif;
       font-size: 10pt;
@@ -46,7 +46,6 @@
       padding: 5px;
       background-color: #6DAFEB;
       border: 1px solid #365775;
-      min-height: 200px;
     }
      #content_left {
       margin-left: 30px;
@@ -62,13 +61,13 @@
       font-size: 1.2em;
     }
     </style>
-<script>
+<script type="text/javascript">
 $(function() {
   var mail = "cezarsa";
   mail += "@";
   mail += "gmail.";
   mail += "com";
-  var link = $("<a href=''></a>");
+  var link = $("<a></a>");
   link.attr('href', "mailto:" + mail);
   link.text(mail);
   $("span.my_email").html(link);
@@ -76,9 +75,11 @@ $(function() {
 </script>
 </head>
 <body>
+
 <p id="title">
 Chromed Bird
-</div>
+</p>
+
 <div id="install" onclick="location.href='http://cloud.github.com/downloads/cezarsa/chromed_bird/chromed_bird_current.crx'">
 Install it now!
 </div>
@@ -91,31 +92,32 @@ Install it now!
   <p>
     More details in the <a href="http://github.com/cezarsa/chromed_bird">GitHub Project Page</a>.
   </p>
+  <h1>Compatibility</h1>
+  <p>
+    Currently only Dev channel releases of Google Chrome support extensions. Check <a href="http://dev.chromium.org/getting-involved/dev-channel">http://dev.chromium.org/getting-involved/dev-channel</a> for more information.
+  </p>
   <h1>Contact</h1>
   <p>
-    <span class="my_email"></span><br/>
-    <a href="http://github.com/cezarsa">http://github.com/cezarsa</a><br/>
+    <span class="my_email"></span><br>
+    <a href="http://github.com/cezarsa">http://github.com/cezarsa</a><br>
     <a href="http://twitter.com/cezarsa">http://twitter.com/cezarsa</a>
   </p>
 </div>
 
 <div id="content_right" class="side_box">
   <h1>Current Features</h1>
-  <p>
-    <ul>
-      <li>Follow your friends timeline and navigate through older tweets;</li>
-      <li>Tweets caching to avoid hitting Twitter's API rate limit;</li>
-      <li>Compose, reply, and RT tweets;</li>
-      <li>The extension updates itself as soon as new versions are available.</li>
-    </ul>
+  <ul>
+    <li>Follow your friends timeline and navigate through older tweets;</li>
+    <li>Tweets caching to avoid hitting Twitter's API rate limit;</li>
+    <li>Compose, reply, and RT tweets;</li>
+    <li>The extension updates itself as soon as new versions are available.</li>
+  </ul>
   <h1>Coming Soon</h1>
-  <p>
-    <ul>
-      <li>Track read / unread tweets;</li>
-      <li>Notify user whenever new tweets arrive.</li>
-    </ul>
-  </p>
-
+  <ul>
+    <li>Track read / unread tweets;</li>
+    <li>Notify user whenever new tweets arrive.</li>
+  </ul>
 </div>
+
 </body>
 </html>
