Manually encoding username and password for basic auth. closes #2

--- a/background.html
+++ b/background.html
@@ -1,5 +1,6 @@
 <script type="text/javascript" src="lib/jquery.js"></script>
 <script type="text/javascript" src="lib/twitter_lib.js"></script>
+<script type="text/javascript" src="lib/jquery.base64.js"></script>
 <script>
 var dataStore = {};
 function setItem(name, data) {
